--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    
+
     <!-- link para os estilos -->
 
     <link href="css/styles.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"   rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -46,7 +49,9 @@
                     <h3>Title</h3>
                     <h4>Subtitle</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
-                    <a href="#">Leia Mais</a>
+                    <div class="footer-card">
+                        <a href="#">Leia Mais</a>
+                    </div>
                 </div>
                 <!-- fim:card -->
 
@@ -56,7 +61,9 @@
                     <h3>Title</h3>
                     <h4>Subtitle</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
-                    <a href="#">Leia Mais</a>
+                    <div class="footer-card">
+                        <a href="#">Leia Mais</a>
+                    </div>
                 </div>
                 <!-- fim:card -->
 
@@ -66,9 +73,29 @@
                     <h3>Title</h3>
                     <h4>Subtitle</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
-                    <a href="#">Leia Mais</a>
+                    <div class="footer-card">
+                        <a href="#">Leia Mais</a>
+                    </div>
                 </div>
                 <!-- fim:card -->
+            </div>
+        </section>
+
+        <section class="novidades">
+            <h2>Novidades</h2>
+            <div class="container">
+                <img src="imgs/Media3.jpg" alt="banner meio">
+                <img src="imgs/Media3.jpg" alt="banner meio">
+            </div>
+        </section>
+
+        <section class="nosso-time">
+            <h2>Nosso Time</h2>
+            <div class="container">
+                <img src="imgs/joão.jpg" alt="">
+                <img src="imgs/Maria.jpg" alt="">
+                <img src="imgs/Maria.jpg" alt="">
+                <img src="imgs/Maria.jpg" alt="">
             </div>
         </section>
     </main>
@@ -113,4 +140,5 @@
     </footer>
 
 </body>
+
 </html>
